--- a/_posts/2017-04-18-second.md
+++ b/_posts/2017-04-18-second.md
@@ -4,7 +4,7 @@ title:  "搭建自己的博客二"
 date:   2017-04-18 17:13:17 +0800
 categories: diary
 location: Florence, Italy
-description: 主要介绍使用哪些工具
+description: 
 ---
 ---
 * GitHub Page    
