--- a/_posts/2017-04-18-first.md
+++ b/_posts/2017-04-18-first.md
@@ -4,7 +4,7 @@ title:  "搭建自己的博客"
 date:   2017-04-18 17:13:17 +0800
 categories: diary
 location: Florence, Italy
-description: 第一次搭建自己的博客，弄了大概半天的时间，以后会多写一些自己的学习经验。
+description: 原来一直使用新浪博客，感觉功能有些繁琐，所以就使用Github和Jekyll搭建了自己的博客，以后会在此多写一些自己的学习经验包括对于生活的感悟，权当是笔记和以后的回忆了。
 ---
 ---
 第一次搭建自己的博客，弄了大概半天的时间，以后会多写一些自己的学习经验。
