--- a/_posts/2017-04-22-vocie.md
+++ b/_posts/2017-04-22-vocie.md
@@ -6,6 +6,14 @@ categories: diary
 location: Florence, Italy
 description: 最近的生活很规律，上班、跑步、睡觉。朋友圈发的少了，思考的时间也少了。今天周末起了个大早，出去走了走，回忆了最近的状态，也试着想想如何改变。   
 ---
-最近的生活很规律，上班、跑步、睡觉。朋友圈发的少了，思考的时间也少了。   
-今天周末起了个大早，出去走了走，回忆了最近的状态，也试着想想如何改变。   
-鲁迅先生曾经说过“不在沉默中爆发，就在沉默中死亡”，所以要必须从沉默中去寻找
+最近的生活很规律，上班、跑步、睡觉。朋友圈发的少了，思考的时间也少了。今天周末起了个大早，出去走了走，回忆了最近的状态，也试着想想如何改变。   
+鲁迅先生曾经说过“不在沉默中爆发，就在沉默中死亡”，所以要必须从沉默中去寻找突破。   
+于是乎先定一个小小的目标:
+> * 读12本书
+* 减肥10斤
+* 学习英语1000个单词，能够无障碍读懂英文文档
+* 扎实计算机基础知识：数据结构、算法、编译原理
+* 学习Python
+* 放松心情，更好的去感悟生活，享受人生
+
+默默的去进步，成为自己希望的人！
